# mondey-frontend-prototype

./: .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEVELOPMENT.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  meta_issue.md  question.md
.github/workflows/: ci.yml  codegen.yml  deploy.yml  docker.yml  format.yml
backend/: Dockerfile  README.md  milestones.db  requirements.txt
backend/app/: app.py  database.py  models.py
frontend/: .env  .prettierignore  Dockerfile  README.md  nginx.conf  openapi-ts.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: admin.svelte.ts  admin.ts  i18n.ts  util.ts
frontend/src/locales/: de.json  en.json
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
mondey_backend/: .env  Dockerfile  README.md  openapi.json  pyproject.toml
mondey_backend/db/: README.md
mondey_backend/mondey_db/: README.md
mondey_backend/src/mondey_backend/: __init__.py  app.py  database.py  db.py  dependencies.py  export.py  main.py  models.py  schemas.py  settings.py  users.py
mondey_backend/src/mondey_backend/databases/: milestones.py  users.py
mondey_backend/src/mondey_backend/models/: milestones.py  questions.py  users.py  utils.py
mondey_backend/src/mondey_backend/routers/: admin.py  auth.py  milestones.py  questions.py  research.py  users.py  utils.py
mondey_backend/static/: README.md
mondey_backend/tests/: conftest.py  test_app.py
mondey_backend/tests/routers/: test_admin.py  test_milestones.py  test_research.py
src/lib/: i18n.ts
src/lib/components/: AbstractContent.svelte  AbstractDropdown.svelte  AlertMessage.svelte  ChildrenRegistration.svelte  Childrenpage.svelte  Dropdown.svelte  Frontpage.svelte  Milestone.svelte  MilestoneButton.svelte  UserDataInput.svelte  UserLogin.svelte  (+3 more)
src/locales/: en.json
src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+141 files in other folders)
